# pharo_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run_docker.sh  test.sh
.github/workflows/: docker-build.yml
app/: main.py
app/api/: routes.py
app/config/: logging.json
app/models/: schemas.py
app/resources/: __init__.py  home.html
app/services/: crud.py
tests/: test_api.py  test_crud.py
