[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-fastapi"
version = "0.1.0"
description = "FastAPI backend for instrument data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "aiofiles",
    "prometheus-fastapi-instrumentator",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
    "ruff>=0.13.1",
    "pyrefly>=0.33.1",
    "pytest-cov",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app" = [
    "resources/*.json",
    "resources/*.svg",
]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
